Film gallery alignment fixed

--- a/src/sass/_body-main.scss
+++ b/src/sass/_body-main.scss
@@ -9,9 +9,10 @@
   margin-bottom: 40px;
 
   @media screen and(min-width: 768px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 30px;
     margin-bottom: 50px;
+    flex: 1 auto;
   }
 
   @media screen and(min-width: 1024px) {
@@ -28,12 +29,17 @@
 
   @media screen and(min-width: 768px) {
     width: 294px;
+
+    grid-column: span 2;
+
+    &:last-child:nth-child(3n - 2) {
+      grid-column-end: 4;
+    }
   }
 
   @media screen and(min-width: 1024px) {
     width: 274px;
     grid-column: span 2;
-
     &:last-child:nth-child(3n - 1) {
       grid-column-end: -2;
     }
